--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "iosfwd": "cpp",
+        "iterator": "cpp",
+        "vector": "cpp"
     },
 }
