--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "utility": "c",
         "__bit_reference": "cpp",
         "__split_buffer": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "__locale": "c"
     },
 }
