--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "__bit_reference": "cpp",
         "__split_buffer": "cpp",
         "initializer_list": "cpp",
-        "__locale": "c"
+        "__locale": "c",
+        "cmath": "cpp"
     },
 }
